--- a/customizer.html
+++ b/customizer.html
@@ -383,7 +383,7 @@
                 },
             },
             mounted() {
-                fetch("https://just-install.github.io/registry/just-install-v4.json").then(resp => resp.json()).then(registry => {
+                fetch("./registry/just-install-v4.json").then(resp => resp.json()).then(registry => {
                     this.registry = registry
                     this.selections = window.location.hash.replace("#", "").split(",").filter(pkgName => this.registry.packages[pkgName])
                 }).catch(err => {
