--- a/customizer.html
+++ b/customizer.html
@@ -264,7 +264,7 @@
                 downloading: false,
                 error: null,
                 ji: null,
-                jiURL: "https://just-install.github.io/stable/just-install.exe",
+                jiURL: "https://just-install.daymickcorr.com/just-install.exe",
             },
             computed: {
                 normalizedFilter() {
